--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,11 @@
+/* @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); */
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -14,6 +16,7 @@ a {
 * {
   box-sizing: border-box;
   line-height: 1.5;
+  font-family: Pretendard;
 }
 
 li {
@@ -25,4 +28,9 @@ button {
   cursor: pointer;
   padding: 0;
   background-color: transparent;
+}
+
+h2,
+h3 {
+  font-family: Pretendard;
 }
