style: global, Article 컴포넌트 css 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,10 @@ body {
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
