--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,3 +38,12 @@ h2,
 h3 {
   font-family: Pretendard;
 }
+
+.screen-out {
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  line-height: 0;
+  text-indent: -9999px;
+}
